[package]
name = "anne-miner"
version = "3.1.7"
license = "GPL-3.0"
authors = ["ANNE Media, edited and altered after forked from ANNE Network, forked from Signum Network, forked from PoC Consortium"]
description = """
anne-miner - a PoST miner written in Rust
"""
build = "build.rs"
repository = ""
documentation = ""
keywords = ["post", "miner", "rust","cryptocurrency", "datacurrency"]
readme = "README.md"
edition = "2021"

[features]
opencl = ["ocl-core"]
default = []

[package.metadata.bundle]
name = "ANNE Miner"
identifier = "network.anne.miner"
category = "Utility"

[package.metadata.bundle.macos]
icon = ["assets/anneminer.icns"]
minimum_system_version = "10.15"
app_category = "public.app-category.utilities"
copyright = "Public Domain"


[dependencies]
embed-resource = "3.0.6"
pin-project = "1"
cfg-if = "1.0.4"
clap = "4.5.37"
core_affinity = "0.8.3"
crossbeam-channel = "0.5.15"
filetime = "0.2"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
hex = "0.4.3"
hostname = "0.4.2"
libc = "0.2"
log = "0.4"
log4rs = { version = "1.4.0", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
num_cpus = "1.9"
ocl-core = { version = "0.11.1", optional = true } 
pbr = "1.0.1"
rand = "0.9.2"
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.34"
stopwatch = "0.0.7"
tokio = { version = "1.37", features = ["full","test-util"] }
tokio-stream = "0.1"
url = { version = "2", features = ["serde"] }
page_size = "0.6.0"
reqwest = { version = "0.13.1", default-features = false, features = ["rustls"] }
bytes = "1.11.0"
url_serde = "0.2"
which = "8.0.0"
atty = "0.2.14" 
nix = { version = "0.31.1", default-features = false, features = ["signal"] }

[dev-dependencies]
cargo-bundle = "0.9.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi"] }

[build-dependencies]
cc = "1.0"
cfg-if = "1.0.4"
winres = "0.1"
